[FIX] The days calculation functionality under the formula of days360

--- a/l10n_co_edi_jorels/views/account_move_view.xml
+++ b/l10n_co_edi_jorels/views/account_move_view.xml
@@ -43,8 +43,8 @@
                     </button>
                 </xpath>
                 <xpath expr="//field[@name='ref']" position="after">
-                    <field name="payment_form_id"/>
-                    <field name="payment_method_id"/>
+                    <field name="payment_form_id" required="1"/>
+                    <field name="payment_method_id" required="1"/>
                     <field name="ei_operation"
                            attrs="{'invisible': [('move_type', 'not in', ('out_invoice', 'out_refund', 'in_invoice', 'in_refund'))]}"/>
                     <field name="ei_correction_concept_credit_id"
