--- a/om_hr_payroll/views/hr_payroll_period_views.xml
+++ b/om_hr_payroll/views/hr_payroll_period_views.xml
@@ -15,7 +15,7 @@
                         </group>
                         <group>
                             <group>
-                                <field name="payment_frequency_id" domain="[('company_id', 'in', company_id)]"/>
+                                <field name="payment_frequency_id"/>
                                 <field name="company_id"/>
                             </group>
                             <group>
