[ADD] loan module and data in novelty

--- a/lt_hr_novelty/views/hr_novelty_type_view.xml
+++ b/lt_hr_novelty/views/hr_novelty_type_view.xml
@@ -9,7 +9,8 @@
                     <field name="name"/>
                     <field name="category_id"/>
                     <field name="factor"/>
-                    <field name="type"/>
+                    <field name="type" decoration-danger="type == 'deduction'" decoration-success="type == 'income'"
+                           widget="badge"/>
                 </tree>
             </field>
         </record>
