--- a/lt_hr_novelty/views/hr_novelty_view.xml
+++ b/lt_hr_novelty/views/hr_novelty_view.xml
@@ -54,28 +54,35 @@
                             <page name="Properties" string="Properties">
                                 <group>
                                     <group>
-                                        <field name="employee_id" options="{'no_create': True, 'no_edit':True}"/>
+                                        <field name="employee_id" options="{'no_create': True, 'no_edit':True}"
+                                               attrs="{'readonly': [('state', '!=', 'draft')]}"/>
                                         <field name="contract_id" domain="[('employee_id', '=', employee_id)]"
-                                               options="{'no_create': True, 'no_edit':True}"/>
+                                               options="{'no_create': True, 'no_edit':True}"
+                                               attrs="{'readonly': [('state', '!=', 'draft')]}"/>
                                         <field name="wage"/>
                                         <field name="apply_date_end" invisible="1"/>
                                         <label for="date_start" string="Period"
                                                attrs="{'invisible': [('apply_date_end', '=', False)]}"/>
                                         <div attrs="{'invisible': [('apply_date_end', '=', False)]}" class="o_row">
-                                            <field name="date_start"/>
+                                            <field name="date_start" attrs="{'readonly': [('state', '!=', 'draft')]}"/>
                                             -
                                             <field name="date_end"
-                                                   attrs="{'required': [('apply_date_end', '=', True)]}"/>
+                                                   attrs="{'required': [('apply_date_end', '=', True)], 'readonly': [('state', '!=', 'draft')]}"/>
                                         </div>
                                         <field name="date_start" string="Date"
-                                               attrs="{'invisible': [('apply_date_end', '=', True)]}"/>
+                                               attrs="{'invisible': [('apply_date_end', '=', True)], 'readonly': [('state', '!=', 'draft')]}"/>
                                     </group>
                                     <group>
-                                        <field name="novelty_type_id" options="{'no_create': True, 'no_edit':True}"/>
+                                        <field name="novelty_type_id" options="{'no_create': True, 'no_edit':True}"
+                                               attrs="{'readonly': [('state', '!=', 'draft')]}"/>
                                         <field name="code"/>
                                         <field name="factor" attrs="{'invisible': [('factor', '=', 0.00)]}"/>
-                                        <field name="quantity"/>
-                                        <field name="value"/>
+                                        <field name="type_calculation"
+                                               attrs="{'invisible': [('type_calculation', '=', False)]}"/>
+                                        <field name="apply_quantity" invisible="1"/>
+                                        <field name="quantity" force_save="1"
+                                               attrs="{'invisible': [('apply_quantity', '=', False)], 'readonly': [('state', '!=', 'draft')]}"/>
+                                        <field name="value" attrs="{'readonly': [('state', '!=', 'draft')]}"/>
                                     </group>
                                 </group>
                                 <group>
